General small cleanups such as fixing z-index and adjusting compatiblenames.txt to update readme accordingly.

--- a/styles/base.css
+++ b/styles/base.css
@@ -85,7 +85,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: var(--z-base);
+  z-index: var(--z-character);
 }
 
 #char1 {
