--- a/styles/cookbook.css
+++ b/styles/cookbook.css
@@ -88,6 +88,7 @@ h1 {
 }
 
 .recipe-note {
+    z-index: var(--z-base);
     position: relative;
     width: 160px;
     height: 160px;
